fix spacings

--- a/styles/aboutMe.css
+++ b/styles/aboutMe.css
@@ -15,7 +15,7 @@ p {
     text-align: left;
     justify-content: center;
     max-width: 500px;
-    padding: 0 0 0 25px;
+    padding: 0 0 0 15px;
 
 }
 
@@ -23,6 +23,6 @@ img {
     max-width: 300px; 
     height: auto; 
     display: inline-block;
-    padding: 10px 0 10px 0;
+    padding: 10px 10px 10px 10px;
 
 }
